--- a/JsxClassLibrary.csproj
+++ b/JsxClassLibrary.csproj
@@ -9,7 +9,9 @@
     <Product>jSilvestri.com BETA v 2024 Web API Demo Collection: Official JSX Class Library Application</Product>
     <Description>The jSilvestri.com BETA v 2024 mobile and web applications, developed for most smart phones, tablets and desktop computers, was created to showcase a wide range of skills to potential clients and employers, while providing helpful information to fellow developers, demos for interview talks, access to resumes, etc.
 
-This application in specific, is a custom jSilvestri.com BETA v 2024 Web API Demo Collection Application, it being the official JSX Class Library Application. Many applications in the Custom jSilvestri.com BETA v 2024 Web API Demo Collection, such as the Angular Web API Demo, Blazor Web API Demo, React Web API Demo, and Vue Web API Demo Applications will use this project to reference common features throughout the collective applications.</Description>
+The JsxClassLibrary in specific, is a FREE, open-source, custom, reusable, jSilvestri.com 2024 Web API Demo Collections ASP.NET Core 8 Class Library, designed to hold common constants, enums, and helper classes that can be shared across multiple projects. This library promotes code reuse, reduces duplication, and simplifies maintenance. 
+
+Many applications in the Custom jSilvestri.com BETA v 2024 Web API Demo Collection, such as the Angular Web API Demo, Blazor Web API Demo, React Web API Demo, and Vue Web API Demo Applications will use this project to reference common features throughout the collective applications.</Description>
     <Copyright>Copyright © 2024 All Rights Reserved by Jason Silvestri</Copyright>
     <PackageIcon>favicon.png</PackageIcon>
     <PackageReleaseNotes>05/28/2024 JSILVESTRI.COM BETA V 2024.0.0.001 CHECK-IN
