Apply latest changes to Read Me and Release Notes.

--- a/JsxClassLibrary.csproj
+++ b/JsxClassLibrary.csproj
@@ -14,28 +14,37 @@ The JsxClassLibrary in specific, is a FREE, open-source, custom, reusable, jSilv
 Many applications in the Custom jSilvestri.com BETA v 2024 Web API Demo Collection, such as the Angular Web API Demo, Blazor Web API Demo, React Web API Demo, and Vue Web API Demo Applications will use this project to reference common features throughout the collective applications.</Description>
     <Copyright>Copyright © 2024 All Rights Reserved by Jason Silvestri</Copyright>
     <PackageIcon>favicon.png</PackageIcon>
-    <PackageReleaseNotes>05/28/2024 JSILVESTRI.COM BETA V 2024.0.0.001 CHECK-IN
+    <PackageReleaseNotes>06/01/2024 JSILVESTRI.COM BETA V 2024.0.0.001 CHECK-IN
 Current Workflow State: Completed
 Mobile / Web Developer: Jason Silvestri
 
-Date Reported:    June 03, 2024
-Date Completed: May 03, 2024
+Date Reported:    June 01, 2024
+Date Completed: June 01, 2024
 Build: BETA v 2024.0.0.001
 
 All Notes:
-This release (2024.0.0.001) marks the first iteration of the custom jSilvestri.com BETA v 2024 Web API Demo Collection: Official JSX Class Library Application.
+This release (2024.0.0.001) marks the first iteration of the custom jSilvestri.com BETA v 2024 Web API Demo Collection: Official JSX Web API Application.
 
 ⚠️ IMPORTANT! ⚠️
 
-This is the initial release of the Custom jSilvestri.com BETA v2024 Web API Demo Collection: Official JSX Class Library Application. It includes only the essential resources by design.
+This is the initial release of the Custom jSilvestri.com BETA v2024 Web API Demo Collection: Official JSX Web API Application. It includes only the essential resources by design.
 
-Many applications in the Custom jSilvestri.com BETA v2024 Web API Demo Collection, such as the Angular, Blazor, React, and Vue Web API Demo Applications, will begin similarly. This intentional minimalism allows for a demonstration of the step-by-step evolution of each application, from initial template to fully developed project. This progression will cover various aspects including graphics, themes, imagery, CSS, JS, HTML, and related technologies, highlighting the process of maximizing creative asset reuse.</PackageReleaseNotes>
+Many applications in the Custom jSilvestri.com BETA v2024 Web API Demo Collection, such as the Angular, Blazor, React, and Vue Web API Demo applications, will begin similarly. This intentional minimalism allows for a demonstration of the step-by-step evolution of each application, from initial template to fully developed project. This progression will cover various aspects including graphics, themes, imagery, CSS, JS, HTML, and related technologies, security updates, highlighting the process of maximizing creative asset reuse.</PackageReleaseNotes>
     <AssemblyVersion>2024.0.0.001</AssemblyVersion>
     <FileVersion>2024.0.0.1</FileVersion>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <RepositoryUrl>https://github.com/JasonSilvestri/JsxClassLibrary</RepositoryUrl>
   </PropertyGroup>
 
   <ItemGroup>
     <None Include="..\..\jSilvestri2024\wwwroot\favicon.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="README.md">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
     </None>
