--- a/JsxClassLibrary.csproj
+++ b/JsxClassLibrary.csproj
@@ -34,6 +34,7 @@ Many applications in the Custom jSilvestri.com BETA v2024 Web API Demo Collectio
     <FileVersion>2024.0.0.1</FileVersion>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <RepositoryUrl>https://github.com/JasonSilvestri/JsxClassLibrary</RepositoryUrl>
+    <Version>2024.0.0.001</Version>
   </PropertyGroup>
 
   <ItemGroup>
