* Installed proper System.IdentityModel.Tokens.Jwt dependencies for Asp.NET Core 8.
* Updated Basic Constants

* Added Basic Enums for User Role support

* Added Basic JWTHelper Helper class for JWT Token support. This will change to be a more advanced version, when we add the Angular, Blazor, React & Vue projects, and custom authentication and encryption login/register support.

--- a/JsxClassLibrary.csproj
+++ b/JsxClassLibrary.csproj
@@ -45,6 +45,10 @@ Many applications in the Custom jSilvestri.com BETA v2024 Web API Demo Collectio
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.6.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="README.md">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
