06/26/2024 JSILVESTRI.COM BETA V 2024.0.0.001 Check-In
Current Workflow State: Completed
Mobile / Web Developer: Jason Silvestri

 Date Reported:    June 25, 2024
 Date Completed: June 26, 2024
 Build: BETA v 2024.0.0.001

 All Notes:
This release (2024.0.0.001) marks the first iteration of the custom Official Jsx Blazor Server Asp.NET Web API Demo Application from the jSilvestri.com BETA v 2024 Web API Demo Collection.

* Reverted reference chnages across all applications of the jSilvestri.com BETA v 2024 Web API Demo Collection.

* Added new JsxClassLibrary Product and Name constants.

--- a/JsxClassLibrary.csproj
+++ b/JsxClassLibrary.csproj
@@ -4,37 +4,43 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <Title>jSilvestri.com BETA v 2024 Web API Demo Collection JSX Class Library</Title>
-    <Company>jSilvestri.com</Company>
-    <Product>jSilvestri.com BETA v 2024 Web API Demo Collection: Official JSX Class Library Application</Product>
-    <Description>The jSilvestri.com BETA v 2024 mobile and web applications, developed for most smart phones, tablets and desktop computers, was created to showcase a wide range of skills to potential clients and employers, while providing helpful information to fellow developers, demos for interview talks, access to resumes, etc.
-
-The JsxClassLibrary in specific, is a FREE, open-source, custom, reusable, jSilvestri.com 2024 Web API Demo Collections ASP.NET Core 8 Class Library, designed to hold common constants, enums, and helper classes that can be shared across multiple projects. This library promotes code reuse, reduces duplication, and simplifies maintenance. 
-
-Many applications in the Custom jSilvestri.com BETA v 2024 Web API Demo Collection, such as the Angular Web API Demo, Blazor Web API Demo, React Web API Demo, and Vue Web API Demo Applications will use this project to reference common features throughout the collective applications.</Description>
-    <Copyright>Copyright © 2024 All Rights Reserved by Jason Silvestri</Copyright>
-    <PackageIcon>favicon.png</PackageIcon>
-    <PackageReleaseNotes>06/01/2024 JSILVESTRI.COM BETA V 2024.0.0.001 CHECK-IN
-Current Workflow State: Completed
-Mobile / Web Developer: Jason Silvestri
-
-Date Reported:    June 01, 2024
-Date Completed: June 01, 2024
-Build: BETA v 2024.0.0.001
-
-All Notes:
-This release (2024.0.0.001) marks the first iteration of the custom jSilvestri.com BETA v 2024 Web API Demo Collection: Official JSX Web API Application.
-
-⚠️ IMPORTANT! ⚠️
-
-This is the initial release of the Custom jSilvestri.com BETA v2024 Web API Demo Collection: Official JSX Web API Application. It includes only the essential resources by design.
-
-Many applications in the Custom jSilvestri.com BETA v2024 Web API Demo Collection, such as the Angular, Blazor, React, and Vue Web API Demo applications, will begin similarly. This intentional minimalism allows for a demonstration of the step-by-step evolution of each application, from initial template to fully developed project. This progression will cover various aspects including graphics, themes, imagery, CSS, JS, HTML, and related technologies, security updates, highlighting the process of maximizing creative asset reuse.</PackageReleaseNotes>
-    <AssemblyVersion>2024.0.0.001</AssemblyVersion>
-    <FileVersion>2024.0.0.1</FileVersion>
-    <PackageReadmeFile>README.md</PackageReadmeFile>
-    <RepositoryUrl>https://github.com/JasonSilvestri/JsxClassLibrary</RepositoryUrl>
+    <Title>Jsx Class Library Project: Phase 1</Title>
     <Version>2024.0.0.001</Version>
+    <Authors>Jason Silvestri</Authors>
+    <Company>jSilvestri.com</Company>
+    <Product>Jsx Class Library Asp.NET Core Project: From the jSilvestri.com BETA v 2024 Web API Demo Collection</Product>
+    <Description>
+      The jSilvestri.com BETA v 2024 mobile and web applications, developed for most smart phones, tablets and desktop computers, were created to showcase a wide range of skills to potential clients and employers, to support existing clients, while providing helpful information to fellow developers, demos for interview talks, access to resumes, etc.
+
+      JsxClassLibrary is a project containing reusable .NET class libraries that provide common functionalities and utilities used across different web applications within the jSilvestri.com BETA v 2024 Web API Demo Collection. This project aims to promote code reuse and maintainability by centralizing shared logic in a single location.
+
+      Currently in Phase 1 of 4, this project is one of several projects from the jSilvestri.com BETA v 2024 Web API Demo Collection.
+    </Description>
+    <Copyright>Copyright © 2024 All Rights Reserved by Jason Silvestri</Copyright>
+    <PackageProjectUrl>https://github.com/JasonSilvestri/JsxClassLibrary</PackageProjectUrl>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <RepositoryUrl>https://github.com/JasonSilvestri/JsxClassLibrary.git</RepositoryUrl>
+    <PackageReleaseNotes>
+      06/26/2024 JSILVESTRI.COM BETA V 2024.0.0.001 Release
+      Current Workflow State: Completed
+      Mobile / Web Developer: Jason Silvestri
+
+      Date Reported:    June 25, 2024
+      Date Completed: June 26, 2024
+      Build: BETA v 2024.0.0.001
+
+      All Notes:
+      This release (2024.0.0.001) marks the first iteration of the custom Official Jsx Blazor Server Asp.NET Web API Demo Application from the jSilvestri.com BETA v 2024 Web API Demo Collection.
+
+      * Reverted reference chnages across all applications of the jSilvestri.com BETA v 2024 Web API Demo Collection.
+
+      * Added new JsxClassLibrary Product and Name constants.
+
+      ⚠️ IMPORTANT! ⚠️
+
+      This is the initial Phase 1 of 4 release of the application. It includes only the essential resources by design, and it will have a release lifecycle of already planned phases and features, also by design.
+    </PackageReleaseNotes>
+
   </PropertyGroup>
 
   <ItemGroup>
