--- a/JsxClassLibrary.csproj
+++ b/JsxClassLibrary.csproj
@@ -49,6 +49,13 @@
 
 </PropertyGroup>
 
+<ItemGroup>
+  <None Include="..\JsxSharedResources\favicon.ico">
+    <Pack>True</Pack>
+    <PackagePath>\</PackagePath>
+  </None>
+</ItemGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.6.0" />
